--- a/DataLayer/Base.lproj/Main.storyboard
+++ b/DataLayer/Base.lproj/Main.storyboard
@@ -72,10 +72,18 @@
                                     <action selector="backgroundButtonAction:" destination="JEX-9P-axG" eventType="touchUpInside" id="hf1-pM-h0J"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xpP-bX-lBu">
+                                <rect key="frame" x="83" y="460" width="209" height="30"/>
+                                <state key="normal" title="Update timestamp and refresh"/>
+                                <connections>
+                                    <action selector="updateTimestampAndRefresh:" destination="JEX-9P-axG" eventType="touchUpInside" id="3kn-HY-uTC"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="6R7-5E-idj" firstAttribute="top" secondItem="e5K-kt-5py" secondAttribute="bottom" constant="8" id="0em-TJ-Dsb"/>
+                            <constraint firstItem="xpP-bX-lBu" firstAttribute="top" secondItem="6R7-5E-idj" secondAttribute="bottom" constant="8" id="1FN-sW-Cft"/>
                             <constraint firstItem="51U-0V-8nv" firstAttribute="top" secondItem="HO6-p6-bA4" secondAttribute="bottom" constant="7.5" id="3TE-Id-j6h"/>
                             <constraint firstItem="6R7-5E-idj" firstAttribute="centerX" secondItem="VUw-jc-0yf" secondAttribute="centerX" id="7BL-e2-spM"/>
                             <constraint firstItem="mol-8K-uKK" firstAttribute="centerX" secondItem="svH-Pt-448" secondAttribute="centerX" id="MB0-Dr-K90"/>
@@ -87,6 +95,7 @@
                             <constraint firstItem="0XM-y9-sOw" firstAttribute="top" secondItem="HO6-p6-bA4" secondAttribute="bottom" constant="80" id="sA9-OU-QEE"/>
                             <constraint firstItem="0XM-y9-sOw" firstAttribute="top" secondItem="mol-8K-uKK" secondAttribute="bottom" constant="7.5" id="si4-a1-0Uv"/>
                             <constraint firstAttribute="trailing" secondItem="0XM-y9-sOw" secondAttribute="trailing" constant="20" symbolic="YES" id="tHV-ZD-HQj"/>
+                            <constraint firstItem="xpP-bX-lBu" firstAttribute="centerX" secondItem="svH-Pt-448" secondAttribute="centerX" id="yPo-c1-9rB"/>
                             <constraint firstItem="HO6-p6-bA4" firstAttribute="centerX" secondItem="svH-Pt-448" secondAttribute="centerX" id="yaE-Q7-pmY"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="VUw-jc-0yf"/>
